--- a/hhackrf.cabal
+++ b/hhackrf.cabal
@@ -16,10 +16,23 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
+  hs-source-dirs:      src
   exposed-modules:     HHRF
   other-extensions:    ForeignFunctionInterface
   build-depends:       base >=4.9 && <4.10
-                     , c2hs
+                     , bytestring
+                     , extra
+                     , mtl
   ghc-options:         -Wall -dynamic
   default-language:    Haskell2010
+  extra-libraries:     hackrf
   build-tools:         c2hs
+
+executable hhrf-exe
+  hs-source-dirs:      app
+  main-is:             Main.hs
+  build-depends:       base
+                     , hhackrf
+                     , bytestring
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3 -dynamic
+  default-language:    Haskell2010
